@@ -27,7 +27,7 @@ usage(FILE *fp, char *prog) {
 	return 0;
 }
 
-ldns_rdf *
+static ldns_rdf *
 create_dname_plus_1(ldns_rdf *dname)
 {
 	uint8_t *wire;
@@ -94,7 +94,7 @@ create_dname_plus_1(ldns_rdf *dname)
 	return newdname;
 }
 
-ldns_rdf *
+static ldns_rdf *
 create_plus_1_dname(ldns_rdf *dname)
 {
 	ldns_rdf *label;
@@ -120,7 +120,7 @@ create_plus_1_dname(ldns_rdf *dname)
 	return label;
 }
 
-ldns_status
+static ldns_status
 query_type_bitmaps(ldns_resolver *res, 
                    uint16_t res_flags,
                    const ldns_rdf *name,
